@@ -20,6 +20,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
+    testCompileOnly 'org.projectlombok:lombok:1.18.30'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
+
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
     implementation 'cglib:cglib:3.3.0'
     testImplementation 'org.assertj:assertj-core:3.24.2'
@@ -30,4 +33,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs += [
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+    ]
 }
